cabal-version: 1.12

name:           arbor-lru-cache
version:        0.1.1.0
description:    Please see the README on GitHub at <https://github.com/arbor/arbor-lru-cache#readme>
homepage:       https://github.com/arbor/arbor-lru-cache#readme
bug-reports:    https://github.com/arbor/arbor-lru-cache/issues
author:         Arbor Networks
maintainer:     mayhem@arbor.net
copyright:      2018 Arbor Networks
category:       Data, Concurrency
synopsis:       LRU cache based on STM
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/arbor/arbor-lru-cache

library
  exposed-modules:
      Arbor.LruCache
      Arbor.LruCache.Internal.PriorityQueue
      Arbor.LruCache.Type
  other-modules:
      Paths_arbor_lru_cache
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , generic-lens
    , lens
    , stm
  default-language: Haskell2010

test-suite arbor-lru-cache-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-tools: hspec-discover
  other-modules:
      Arbor.LruCache.Internal.PriorityQueueSpec
      Arbor.LruCache.LruCacheSpec
      Paths_arbor_lru_cache
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      arbor-lru-cache
    , base >=4.7 && <5
    , containers
    , generic-lens
    , hedgehog
    , hspec
    , hw-hspec-hedgehog
    , lens
    , stm
  default-language: Haskell2010
